--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -1,38 +1,44 @@
+@import "~@fortawesome/fontawesome-free/css/all.min.css";
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+.control-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.control-buttons button {
+  background-color: #282c34;
+  border: none;
+  color: white;
+  padding: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.control-buttons button:hover {
+  background-color: #3b4048;
+}
+
+.control-buttons i {
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.exit-button {
+  background-color: red !important;
   color: white;
+  border: none;
+  padding: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.exit-button:hover {
+  background-color: darkred !important;
 }
